@@ -59,6 +59,8 @@ Bugs fixed
   transforming.
 * On Py2 environment, conf.py that is generated by sphinx-quickstart should have u prefixed
   config value for 'version' and 'release'.
+* #2102: On Windows + Py3, using ``|today|`` and non-ASCII date format will raise
+  UnicodeEncodeError.
 
 Release 1.3.1 (released Mar 17, 2015)
 =====================================
